@@ -173,6 +173,11 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.5.1</version>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19.1</version>
+			</plugin>
   		</plugins>
   	</pluginManagement>
   	<plugins>
@@ -182,6 +187,17 @@
 				<source>1.8</source>
 				<target>1.8</target>
 				<compilerVersion>1.8</compilerVersion>
+			</configuration>
+		</plugin>
+		<plugin>
+			<artifactId>maven-surefire-plugin</artifactId>
+			<configuration>
+				<argLine>-Xmx=512m -XX:MaxPermSize=256m</argLine>
+				<forkMode>once</forkMode>
+				<argLine>-enableassertions</argLine>
+				<testFailureIgnore>true</testFailureIgnore>
+				<parallel>methods</parallel>
+				<threadCount>1</threadCount>
 			</configuration>
 		</plugin>
 	</plugins>
